@@ -39,6 +39,14 @@ support them either. So don't use them.
 
 --- MEX-file in class directories -------------------------------------------
 
-Octave 3.6.4 does allow to manipulate instances of user-defined classes through
-MEX-files. Octave 3.8.x probably won't. So don't think of it.
+Octave 3.6.4 does allow to manipulate instances of user-defined classes
+through MEX-files. Octave 3.8.x probably won't. So don't think of it.
 
+
+--- Overloading isequal -----------------------------------------------------
+
+Overloading the base function 'isequal' is usually not required for user-
+defined classes. Some old releases of Octave (e.g., 3.2.4), however have a
+bug that make isequal (x, y) return false when x and y are objects, even if
+they are equal. Therefore, as long as we want to support those releases, we
+have have to overload isequal (see, e.g., @stk_dataframe).
